Command handling refactor
Signed-off-by: scorp18pl <scorpion18pl@gmail.com>